写盘时校验与更新磁盘剩余空间